--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,23 @@ table {
     padding-top: 20px !important;
     padding-bottom: 20px !important;
 }
+
+.calender {
+    margin-bottom: 15px;
+}
+
+.calendar-button-left-right {
+    margin-bottom: 15px;
+}
+
+.calendar-button-lich div button {
+    min-width: 18rem !important;
+    margin: 5px;
+}
+
+.title-month-year {
+    font-size: 18px;
+    margin-left: 30px;
+    margin-right: 30px;
+    vertical-align: middle;
+}
