--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,18 @@
     font-weight: bold;
 }
 
-.background-thoi-gian {
+.background-thu-ngay-thang {
     background-color: #cacaca;
 }
 
 table {
     border-collapse: separate !important;
+    /* table-layout: fixed; */
 }
 
 .table thead th {
     border: none !important;
+    /* text-align: center; */
 }
 
 .table tbody td {
@@ -25,6 +27,7 @@ table {
     cursor: pointer;
     padding-top: 20px !important;
     padding-bottom: 20px !important;
+    /* white-space: pre-wrap; */
 }
 
 .calender {
@@ -45,4 +48,10 @@ table {
     margin-left: 30px;
     margin-right: 30px;
     vertical-align: middle;
+}
+
+@media screen and (max-width: 767px) {
+    .reponsive-align {
+        text-align: center !important;
+    }
 }
