--- a/css/lopHoc_style.css
+++ b/css/lopHoc_style.css
@@ -1,7 +1,3 @@
-.well {
-    padding: 20px 30px 30px 30px !important;
-}
-
 .change-size {
     width: 700px;
     margin: 0 auto;
@@ -15,6 +11,10 @@
     border-right-width: 5px !important;
 }
 
+.alert h2 {
+    margin: 0;
+}
+
 fieldset {
     padding-top: 0px !important;
 }
@@ -25,4 +25,67 @@ fieldset {
 
 .smart-form fieldset {
     background-color: transparent !important;
+}
+
+
+tbody>tr>td:nth-child(4)>div {
+    background-image: url("../img/avatars_new/2735859.jpg");
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: 400px 200px;
+    /* margin: auto; */
+}
+
+.anh-1 {
+    background-position: -25px 0;
+}
+
+.anh-2 {
+    background-position: -108px 0;
+}
+
+.anh-3 {
+    background-position: -200px 0;
+}
+
+.anh-4 {
+
+    background-position: -280px 0;
+}
+
+
+.so-thu-tu {
+    width: 43px;
+}
+
+.ten {
+    width: 200px;
+}
+
+.chuc-vu {
+    width: 200px;
+}
+
+.avatar {
+    width: 200px;
+    padding-left: 42px !important;
+}
+
+tbody td {
+    vertical-align: middle !important;
+}
+
+tbody>tr>td:nth-child(1) {
+    text-align: center;
+    /* font-weight: bolder; */
+}
+
+tbody>tr:nth-child(1) {
+    color: red;
+    font-weight: bolder;
+}
+
+tbody>tr>td {
+    /* font-weight: bolder; */
 }
