--- a/css/lopHoc_style.css
+++ b/css/lopHoc_style.css
@@ -4,10 +4,24 @@
     div:nth-child(3) {
         width: 100%;
     }
+
 }
+
+@media screen and (max-width: 767px) {
+
+    .well .row .divider {
+        /* width: 100% !important; */
+        display: block !important;
+    }
+}
+
 
 .page-title {
     display: block !important;
+}
+
+.well .row .divider {
+    display: none;
 }
 
 .alert-custom {
@@ -82,6 +96,10 @@ tbody>tr>td:nth-child(4)>div {
 .anh-4 {
 
     background-position: -280px 0;
+}
+
+.well .row p {
+    font-size: 15px !important;
 }
 
 
